# ada-back

./: .env.example  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: add-to-org-project.yml  list-projects.yml  pr-preprod-tests.yml  preprod-tests.yml  project-sync.yml  promote-to-production.yml  promote.yml  tests.yml
Ada-service/: logger_config.py  main_service.py
ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
alembic/: env.py
alembic/versions/: 0fc669666717_add_created_by_user_id_to_tasks.py  1b7e0d2c431e_add_reset_token_fields.py  2c0c26e660d5_add_user_status.py  3a9f2f1d6c5b_replace_is_completed_with_status.py  3c48a6fdd325_add_notification_prefs_to_settings.py  5c7f3042b1b1_add_assigned_by_to_tasks.py  673cb1639efc_add_due_date_to_tasks.py  8b1e2f91e9e7_add_email_verification_fields.py  94e68349488e_initial_migration.py  94eedaa9c884_add_deleted_at_to_tasks.py  9d7c0c4a4b8c_replace_superuser_and_premium_with_role.py  a1b2c3d4e5f6_add_achievements.py  a2a8cfb93f7b_add_reward_points_to_tasks.py  c5c3a0a73a9b_add_membership_models.py  e0f7381c0a9f_add_user_fields.py  f66e5c3e972d_add_premium_and_family_membership.py  fb2d4edaf741_add_family_and_membership.py
app/: database.py  dependencies.py  main.py  startup.py
app/core/: config.py  error_handlers.py  exceptions.py  logging.py  security.py
app/crud/: achievement.py  base.py  family.py  group.py  notification.py  setting.py  (+2 more)
tests/: test_health.py  test_smoke.py  test_tasks_schema.py
workflows/: project-sync.yml
(+86 files in other folders)
