[tool.poetry]
name = "ada-back"
version = "0.1.0"
description = ""
authors = ["ferretvl <gerasimetsav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
SQLAlchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
passlib = "^1.7.4"
email-validator = "^2.2.0"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
