[tool.poetry]
name = "ada-back"
version = "0.1.0"
description = ""
authors = ["ferretvl <gerasimetsav@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
SQLAlchemy = "^2.0.37"
alembic = "^1.16.2"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.2.3"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "<4"
email-validator = "^2.2.0"
dotenv = "^0.9.9"
PyJWT = "^2.10.1"
poetry-core = ">=2.1.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.6.1"
dependency-injector = "^4.43.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
